# QRecog

./: .gitignore  QRecog.pro  README.md  main.cpp
CameraTest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
Euclidean Cluster Extraction/: CMakelists.txt
PCLVisualizer/: CMakelists.txt  README.md
build-QRecog-qt4_8-Debug/: Makefile  moc_clusteringoptionview.cpp  moc_clusteringview.cpp  moc_filechooser.cpp  ui_acquisitionview.h  ui_clusteringview.h  ui_filechooser.h  ui_pclviewer.h  ui_segmentationoptionview.h
build-QRecog-qt4_8-Release/: Makefile  moc_acquisitionview.cpp  moc_cameractrlview.cpp  moc_filteroptionview.cpp  moc_mainwindow.cpp  moc_pclviewer.cpp  moc_segmentationoptionview.cpp  ui_cameractrlview.h  ui_clusteringoptionview.h  ui_filteroptionview.h  ui_mainwindow.h
correspondence_grouping/: CMakelists.txt  README.md  brute.py
dataset/: cloud_cluster_0.pcd  cloud_cluster_1.pcd  cloud_cluster_2.pcd
project/: QRecog.pro  QRecog.pro.user.16  acquisitionview.cpp  acquisitionview.h  acquisitionview.ui  cameractrlview.cpp  cameractrlview.h  cameractrlview.ui  cameramodel.cpp  cameramodel.h  cameramodelopengev.cpp  cameramodelopengev.h  clusteringoptionview.cpp  clusteringoptionview.h  clusteringoptionview.ui  clusteringview.cpp  clusteringview.h  clusteringview.ui  correspondenceview.cpp  correspondenceview.cpp.orig  correspondenceview.h  correspondenceview.ui  defines.h  filechooser.cpp  filechooser.h  filechooser.ui  filteroptionview.cpp  filteroptionview.h  filteroptionview.ui  help.cpp  help.h  logger.cpp  logger.h  main.cpp  (+43 more)
(+19 files in other folders)
